Fixed button/text too small, set image to display none on phone, and added placeholder text

--- a/css/home.css
+++ b/css/home.css
@@ -363,16 +363,19 @@ a{
 
     .Logout{
         font-size:16px;
+        margin-top: 24px;
     }
 
     .EditSaveButton{
         width: 136px;
         height: 48px;
+        margin-bottom: 16px;
     }
     
     .EditCancelButton{
         width: 136px;
         height: 48px;
+        margin-bottom: 16px;
     }
 
     .EditCancelForm{
